# renamer

./: .gitignore  PKGBUILD  README.md  numd-launch.sh  pyproject.toml
archlinux/: PKGBUILD  cleanme.sh
src/renamer/: __init__.py  numd.py
tests/: test_numd.py
