[tool.poetry]
name = "renamer"
version = "0.1.3"
description = ""
authors = ["ccdale <chris.allison@hivehome.com>"]
readme = "README.md"
packages = [{include = "renamer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ccalogging = "^0.4.4"
ccaerrors = "^0.1.2"

[tool.poetry.scripts]
numd = "renamer:doRename"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
