[tool.poetry]
name = "renamer"
version = "0.1.6"
description = ""
authors = ["ccdale <chris.charles.allison+renamer@gmail.com>"]
readme = "README.md"
packages = [{include = "renamer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
ccalogging = "^0.4.4"
ccaerrors = "^0.1.2"

[tool.poetry.scripts]
numd = "renamer.numd:doRename"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
