[project]
name = "renamer"
version = "0.2.1"
description = ""
authors = [{ name = "ccdale", email = "chris.charles.allison+renamer@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ccalogging>=0.4.4,<0.5",
]

[project.scripts]
numd = "renamer.numd:doRename"

[tool.hatch.build.targets.sdist]
include = ["src/renamer"]

[tool.hatch.build.targets.wheel]
include = ["src/renamer"]

[tool.hatch.build.targets.wheel.sources]
"src/renamer" = "renamer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
